crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_binding_chain_three_steps.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: dag
---
PopulatedExecutionDag {
    edges: [
        BindingEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
            slot: BindingSlotId(
                "cbu",
            ),
        },
        BindingEdge {
            from: NodeId(
                1,
            ),
            to: NodeId(
                2,
            ),
            slot: BindingSlotId(
                "case",
            ),
        },
    ],
}
