crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_cancellation_scope_stub.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: dag
---
PopulatedExecutionDag {
    edges: [
        CancellationScopeEdge {
            trigger: NodeId(
                0,
            ),
            scope: [
                NodeId(
                    1,
                ),
                NodeId(
                    2,
                ),
            ],
        },
    ],
}
