crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_empty_has_no_edges.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: dag
---
PopulatedExecutionDag {
    edges: [],
}
