crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_join_barrier_wait_all.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: dag
---
PopulatedExecutionDag {
    edges: [
        JoinBarrierEdge {
            predecessors: [
                NodeId(
                    0,
                ),
                NodeId(
                    1,
                ),
                NodeId(
                    2,
                ),
            ],
            join_node: NodeId(
                3,
            ),
            mode: WaitAll,
        },
    ],
}
