crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_ordering_edges_filter.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: ordering_pairs
---
[
    (
        0,
        1,
    ),
    (
        1,
        2,
    ),
]
