crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_resource_coord_edge.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: dag
---
PopulatedExecutionDag {
    edges: [
        ResourceCoordEdge {
            node_a: NodeId(
                0,
            ),
            node_b: NodeId(
                2,
            ),
        },
    ],
}
