crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__dag_single_binding_edge.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: dag
---
PopulatedExecutionDag {
    edges: [
        BindingEdge {
            from: NodeId(
                0,
            ),
            to: NodeId(
                1,
            ),
            slot: BindingSlotId(
                "cbu",
            ),
        },
    ],
}
