crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__plan_policy_cross_resource_invariant_is_atomic_short.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: policy
---
AtomicShort
