crates/dsl-core/src/executable_plan/integration_tests/snapshots/dsl_core__executable_plan__integration_tests__plan_golden__plan_policy_idempotent_ensure_is_durable_step.snap
---
source: crates/dsl-core/src/executable_plan/integration_tests/plan_golden.rs
expression: policy
---
DurableStep
